--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension Math::Prime::FastSieve.
 
-0.09  ????????????????????????????
+0.09  Thu May 10 00:18:00 PST 2012
     - Fixed email address in Makefile.PL.  How did I miss that for so long?
+    - Added 'META_MERGE => provides' field to Makefile.PL
 
 0.08  Tue May 08 00:38:00 PST 2012
     - Inline::CPP version requirement is now 0.39.
@@ -12,20 +13,24 @@ Revision history for Perl extension Math::Prime::FastSieve.
       of Makefile.PL.  This is cleaner and nicer.
     - Added optional RELEASE_TESTING tests for Perl::Critic, Test::Pod,
       and Test::Pod::Coverage.
+
 0.07  Tue Feb 07 09:39:00 PST 2012
     - Bump Inline::CPP version requirement to 0.34 to gain broader
       install success.  Inline::CPP v0.33 was failing for a lot of smokers.
       V0.34 seems to be much better in that regard, so by requiring that
       version more smokers will be able to set up M::P::FS.
+
 0.06  Sat Jan 20 09:23:00 PST 2012
     - Fixed "world writable" directories (that's what I get for preparing
       a distro via Windows.
+
 0.05  Sat Jan 20 01:37:00 PST 2012
     - Repaired test suite (mistakenly omitted from previous distribution).
     - Converted all C++ subs to type-safe unsigned ints and
       std::vector<bool>::size_type to eliminate potential for signed
       roll-over errors.  Note: input params are still signed ints because
       pure-Perl offers no means of creating an SV containing a UV.
+
 0.04  Wed Dec 14 21:33:00 2011
     - Listed Inline::MakeMaker as both a BUILD_REQUIRES and a
       CONFIG_REQUIRES so that the various installation tools (cpan, cpanm,
@@ -34,6 +39,7 @@ Revision history for Perl extension Math::Prime::FastSieve.
     - Added a few more tests.
     - Set minimum Perl version to 5.6.0.  If this causes smoke test failures
       I will revert to 5.8.0 again.
+
 0.03  Tue Dec 13 15:17:00 2011
     - Revisions to the documentation.
     - Listed Inline as a build dependency in an effort to get better
@@ -42,9 +48,10 @@ Revision history for Perl extension Math::Prime::FastSieve.
       Inline::MakeMaker isn't found, causing Makefile.PL to abort.
     - Added ranged_primes() method.
     - Added tests for ranged_primes method.
+
 0.02  Sun Dec 11 23:46:00 2011
     - Fixed minimum Perl version: was 5.14.2.  Now 5.8.0.
+
 0.01  Sat Dec 10 00:10:33 2011
     - original version; created by h2xs 1.23 with options
-        -PAXn Math::Prime::FastSieve
-
+      -PAXn Math::Prime::FastSieve
