--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Perl extension Math::Prime::FastSieve.
       size_type to UL where it makes sense to do so).
     - Added proper (modern) C++ class member data initializers.
     - FastSieve.pm now perlcritic friendly at all severity levels.
+    - Worked through a bunch of Perl::Critic issues in the test suite.
 
 0.10  Thu May 24 23:48:00 PDT 2012
     - Added an END{} block with code that will satisfy Inline so that no
