Commit changes by Dana Jacobsen.  POD revisions.  CPAN version 0.11.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Math::Prime::FastSieve.
 
-0.10_001 Sat May 26 00:36:00 PDT 2012
+0.11  Sat May 26 00:36:00 PDT 2012
+    - Memory and speed performance improvements contributed by Dana Jacobsen:
+      Represent only odds in the bit sieve (halving the size).
     - Improved type safety (explicitly specify UL and static casting of
       size_type to UL where it makes sense to do so).
     - Added proper (modern) C++ class member data initializers.
