--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-Math-Prime-FastSieve version 0.12
+Math-Prime-FastSieve version 0.13
 
 Stable release.  Performance enhancements to sieve algorithm.
 Also, the bit sieve only represents odds, which cuts the sieve memory
 footprint in half.
 
-v0.12 fixes some version number inconsistancies.
+v0.13 Minor tweaks to the C++: Better use of initialization lists and STL
+memory management.
 
 ======================================
 
