--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Math::Prime::FastSieve.
 
+0.19 2014-12-08
+  - Convert to Inline::Module.
+
 0.18 2012-12-07
   - C++ code improvemenets (readability via typedef, pre-increment
     micro-optimization)
