Update version numbering for CPAN v0.02.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension Alt::Math::Prime::FastSieve::Inline.
 
+0.02 2014-12-15
+  - Rework meta.
+
 0.01 2014-12-13
   - original version
+
